--- a/style.css
+++ b/style.css
@@ -3,4 +3,24 @@
 }
 .btn{
     color: aliceblue;
+    margin-right: 10px;
+    
 }
+header{
+    position: relative;
+    z-index: 1;
+
+}
+footer {
+    display: flex;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3.5vw;
+    background-color: rgb(54, 30, 30);
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
