--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,7 @@ footer {
   .d-block{
       height: 30vw;
   }
+  .carousel-caption{
+      color: #311212;
+      font-family: Georgia, 'Times New Roman', Times, serif;
+  }
