--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 .navbar-dark{
     background-color: #4c3c3c;
 }
+.ntf{
+    background-color: #4c3c3c;  
+    margin-right: 10px;
+    border: #4c3c3c;
+}
 .btn{
     color: aliceblue;
     margin-right: 10px;
@@ -11,23 +16,73 @@ header{
     z-index: 1;
 
 }
-footer {
-    display: flex;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 3.5vw;
-    background-color: rgb(54, 30, 30);
-    color: white;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+.footer-basic {
+    padding:40px 0;
+    background-color:#4c3c3c;
+    color:#4b4c4d;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin:0 8px;
+    color:inherit;
+    opacity:0.75;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:#aaa;
+    margin-bottom:0;
+  }
+  .footer-basic .list-inline-item {
+    color:#aaa; 
   }
   .d-block{
       height: 35vw;
   }
   .carousel-caption{
-      color: #311212;
+      color: #e4d9d9;
       font-family: Georgia, 'Times New Roman', Times, serif;
   }
   .container{
@@ -35,6 +90,7 @@ footer {
   }
   h2{
       font-family: Verdana, Geneva, Tahoma, sans-serif;
+      
   }
   p{
       font-family: 'Times New Roman', Times, serif;
